--- a/src/components/Answer.css
+++ b/src/components/Answer.css
@@ -2,4 +2,17 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
+
+#answerInput{
+  width: 25%;
+  margin-bottom: 3em;
+}
+
+.materialTextField{
+  width:100%
+}
+
