--- a/src/components/NumberSlide.css
+++ b/src/components/NumberSlide.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     grid-template-columns: 10% auto 10%;
-    grid-template-rows: auto 3% ;
+    grid-template-rows: auto 20% ;
     align-items: stretch; 
 }
 #number{
@@ -14,6 +14,10 @@
 }
 #indicator {
     width: 100%;
+}
+#activeNumber {
+  font-size: 2em;
+  font-weight: bolder;
 }
 .arrow {
     display: flex;
