--- a/src/components/MajorSystem.css
+++ b/src/components/MajorSystem.css
@@ -5,10 +5,21 @@
 }
 
 .majorInputItem{
+    width: 18%;
+    margin: 1% 1%;
+}
+
+.extraSpace{
+  margin-bottom: 5em;
+}
+
+@media (max-width: 40em) {
+  .majorInputItem{
     width: 31%;
     margin: 1% 1%;
 }
 
 .extraSpace{
-    margin-right: 66%;
+  margin-right: 66%;
+}
 }
