--- a/src/components/Answer.css
+++ b/src/components/Answer.css
@@ -29,3 +29,12 @@
   width:100%
 }
 
+.fab {
+    margin: 0;
+    top: auto;
+    right: 1%;
+    bottom: 2%;
+    left: auto;
+    position: fixed;
+}
+
