--- a/src/components/MajorSystem.css
+++ b/src/components/MajorSystem.css
@@ -8,9 +8,21 @@
     width: 18%;
     margin: 1% 1%;
 }
-
+#majorLengthTabs{
+  background: whitesmoke;
+  margin-bottom:1em;
+}
 .extraSpace{
   margin-bottom: 5em;
+}
+
+#fab {
+  margin: 0;
+  top: auto;
+  right: 1%;
+  bottom: 2%;
+  left: auto;
+  position: fixed;
 }
 
 @media (max-width: 40em) {
@@ -22,4 +34,5 @@
 .extraSpace{
   margin-right: 66%;
 }
+
 }
